Migration section added

--- a/service.html
+++ b/service.html
@@ -169,6 +169,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
