--- a/services/anchorwatch.html
+++ b/services/anchorwatch.html
@@ -384,7 +384,7 @@
             <img src="/images/bitkey.svg" alt="Bitkey" class="svg-icon" />
             <span class="visually-hidden">Bitkey</span>
           </a>
-          <a class="cta-button" href="/anchorwatch-vs-bitkey.html?services=AnchorWatch,Bitkey&category=Store%20it%20safely">Compare with AnchorWatch</a>
+          <a class="cta-button" href="/compare/anchorwatch-vs-bitkey.html">Compare with AnchorWatch</a>
         </div>
       </li>
       <li class="alt-item">
@@ -393,7 +393,7 @@
             <img src="/images/sparrow.svg" alt="Sparrow" class="svg-icon" />
             <span class="visually-hidden">Sparrow</span>
           </a>
-          <a class="cta-button" href="/anchorwatch-vs-sparrow.html?services=AnchorWatch,Sparrow&category=Store%20it%20safely">Compare with AnchorWatch</a>
+          <a class="cta-button" href="/compare/anchorwatch-vs-sparrow.html">Compare with AnchorWatch</a>
         </div>
       </li>
       <li class="alt-item">
@@ -402,7 +402,7 @@
             <img src="/images/unchained.svg" alt="Unchained" class="svg-icon" />
             <span class="visually-hidden">Unchained</span>
           </a>
-          <a class="cta-button" href="/anchorwatch-vs-unchained.html?services=AnchorWatch,Unchained&category=Store%20it%20safely">Compare with AnchorWatch</a>
+          <a class="cta-button" href="/compare/anchorwatch-vs-unchained.html">Compare with AnchorWatch</a>
         </div>
       </li>
       <li class="alt-item">
@@ -411,7 +411,7 @@
             <img src="/images/wasabi.svg" alt="Wasabi" class="svg-icon" />
             <span class="visually-hidden">Wasabi</span>
           </a>
-          <a class="cta-button" href="/anchorwatch-vs-wasabi.html?services=AnchorWatch,Wasabi&category=Store%20it%20safely">Compare with AnchorWatch</a>
+          <a class="cta-button" href="/compare/anchorwatch-vs-wasabi.html">Compare with AnchorWatch</a>
         </div>
       </li></ul>
 </section>
@@ -517,6 +517,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
