--- a/services/opennode.html
+++ b/services/opennode.html
@@ -409,7 +409,7 @@
             <img src="/images/btc-pay.svg" alt="BTC Pay" class="svg-icon" />
             <span class="visually-hidden">BTC Pay</span>
           </a>
-          <a class="cta-button" href="/btc-pay-vs-opennode.html?services=OpenNode,BTC%20Pay&category=Accept%20Bitcoin%20as%20a%20merchant">Compare with OpenNode</a>
+          <a class="cta-button" href="/compare/btc-pay-vs-opennode.html">Compare with OpenNode</a>
         </div>
       </li>
       <li class="alt-item">
@@ -418,7 +418,7 @@
             <img src="/images/lightspark.svg" alt="Lightspark" class="svg-icon" />
             <span class="visually-hidden">Lightspark</span>
           </a>
-          <a class="cta-button" href="/lightspark-vs-opennode.html?services=OpenNode,Lightspark&category=Accept%20Bitcoin%20as%20a%20merchant">Compare with OpenNode</a>
+          <a class="cta-button" href="/compare/lightspark-vs-opennode.html">Compare with OpenNode</a>
         </div>
       </li></ul>
 </section>
@@ -524,6 +524,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
