--- a/services/breez.html
+++ b/services/breez.html
@@ -374,7 +374,7 @@
             <img src="/images/aqua.svg" alt="Aqua" class="svg-icon" />
             <span class="visually-hidden">Aqua</span>
           </a>
-          <a class="cta-button" href="/aqua-vs-breez.html?services=Breez,Aqua&category=Spend%20Bitcoin">Compare with Breez</a>
+          <a class="cta-button" href="/compare/aqua-vs-breez.html">Compare with Breez</a>
         </div>
       </li>
       <li class="alt-item">
@@ -383,7 +383,7 @@
             <img src="/images/fold.svg" alt="Fold" class="svg-icon" />
             <span class="visually-hidden">Fold</span>
           </a>
-          <a class="cta-button" href="/breez-vs-fold.html?services=Breez,Fold&category=Spend%20Bitcoin">Compare with Breez</a>
+          <a class="cta-button" href="/compare/breez-vs-fold.html">Compare with Breez</a>
         </div>
       </li>
       <li class="alt-item">
@@ -392,7 +392,7 @@
             <img src="/images/muun.svg" alt="Muun" class="svg-icon" />
             <span class="visually-hidden">Muun</span>
           </a>
-          <a class="cta-button" href="/breez-vs-muun.html?services=Breez,Muun&category=Spend%20Bitcoin">Compare with Breez</a>
+          <a class="cta-button" href="/compare/breez-vs-muun.html">Compare with Breez</a>
         </div>
       </li>
       <li class="alt-item">
@@ -401,7 +401,7 @@
             <img src="/images/phoenix.svg" alt="Phoenix" class="svg-icon" />
             <span class="visually-hidden">Phoenix</span>
           </a>
-          <a class="cta-button" href="/breez-vs-phoenix.html?services=Breez,Phoenix&category=Spend%20Bitcoin">Compare with Breez</a>
+          <a class="cta-button" href="/compare/breez-vs-phoenix.html">Compare with Breez</a>
         </div>
       </li></ul>
 </section>
@@ -507,6 +507,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
