--- a/services/bull-bitcoin.html
+++ b/services/bull-bitcoin.html
@@ -389,7 +389,7 @@
             <img src="/images/bisq.svg" alt="Bisq" class="svg-icon" />
             <span class="visually-hidden">Bisq</span>
           </a>
-          <a class="cta-button" href="/bisq-vs-bull-bitcoin.html?services=Bull%20Bitcoin,Bisq&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bisq-vs-bull-bitcoin.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -398,7 +398,7 @@
             <img src="/images/bitonic.svg" alt="Bitonic" class="svg-icon" />
             <span class="visually-hidden">Bitonic</span>
           </a>
-          <a class="cta-button" href="/bitonic-vs-bull-bitcoin.html?services=Bull%20Bitcoin,Bitonic&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bitonic-vs-bull-bitcoin.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -407,7 +407,7 @@
             <img src="/images/hodlhodl.svg" alt="Hodlhodl" class="svg-icon" />
             <span class="visually-hidden">Hodlhodl</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-hodlhodl.html?services=Bull%20Bitcoin,Hodlhodl&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-hodlhodl.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -416,7 +416,7 @@
             <img src="/images/peach.svg" alt="Peach" class="svg-icon" />
             <span class="visually-hidden">Peach</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-peach.html?services=Bull%20Bitcoin,Peach&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-peach.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -425,7 +425,7 @@
             <img src="/images/pocket.svg" alt="Pocket" class="svg-icon" />
             <span class="visually-hidden">Pocket</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-pocket.html?services=Bull%20Bitcoin,Pocket&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-pocket.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -434,7 +434,7 @@
             <img src="/images/relai.svg" alt="Relai" class="svg-icon" />
             <span class="visually-hidden">Relai</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-relai.html?services=Bull%20Bitcoin,Relai&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-relai.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -443,7 +443,7 @@
             <img src="/images/river.svg" alt="River" class="svg-icon" />
             <span class="visually-hidden">River</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-river.html?services=Bull%20Bitcoin,River&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-river.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -452,7 +452,7 @@
             <img src="/images/robosats.svg" alt="RoboSats" class="svg-icon" />
             <span class="visually-hidden">RoboSats</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-robosats.html?services=Bull%20Bitcoin,RoboSats&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-robosats.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -461,7 +461,7 @@
             <img src="/images/strike.svg" alt="Strike" class="svg-icon" />
             <span class="visually-hidden">Strike</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-strike.html?services=Bull%20Bitcoin,Strike&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-strike.html">Compare with Bull Bitcoin</a>
         </div>
       </li>
       <li class="alt-item">
@@ -470,7 +470,7 @@
             <img src="/images/swan.svg" alt="Swan" class="svg-icon" />
             <span class="visually-hidden">Swan</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-swan.html?services=Bull%20Bitcoin,Swan&category=Buy%20Bitcoin">Compare with Bull Bitcoin</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-swan.html">Compare with Bull Bitcoin</a>
         </div>
       </li></ul>
 </section>
@@ -576,6 +576,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
