--- a/services/muun.html
+++ b/services/muun.html
@@ -374,7 +374,7 @@
             <img src="/images/aqua.svg" alt="Aqua" class="svg-icon" />
             <span class="visually-hidden">Aqua</span>
           </a>
-          <a class="cta-button" href="/aqua-vs-muun.html?services=Muun,Aqua&category=Spend%20Bitcoin">Compare with Muun</a>
+          <a class="cta-button" href="/compare/aqua-vs-muun.html">Compare with Muun</a>
         </div>
       </li>
       <li class="alt-item">
@@ -383,7 +383,7 @@
             <img src="/images/breez.svg" alt="Breez" class="svg-icon" />
             <span class="visually-hidden">Breez</span>
           </a>
-          <a class="cta-button" href="/breez-vs-muun.html?services=Muun,Breez&category=Spend%20Bitcoin">Compare with Muun</a>
+          <a class="cta-button" href="/compare/breez-vs-muun.html">Compare with Muun</a>
         </div>
       </li>
       <li class="alt-item">
@@ -392,7 +392,7 @@
             <img src="/images/fold.svg" alt="Fold" class="svg-icon" />
             <span class="visually-hidden">Fold</span>
           </a>
-          <a class="cta-button" href="/fold-vs-muun.html?services=Muun,Fold&category=Spend%20Bitcoin">Compare with Muun</a>
+          <a class="cta-button" href="/compare/fold-vs-muun.html">Compare with Muun</a>
         </div>
       </li>
       <li class="alt-item">
@@ -401,7 +401,7 @@
             <img src="/images/phoenix.svg" alt="Phoenix" class="svg-icon" />
             <span class="visually-hidden">Phoenix</span>
           </a>
-          <a class="cta-button" href="/muun-vs-phoenix.html?services=Muun,Phoenix&category=Spend%20Bitcoin">Compare with Muun</a>
+          <a class="cta-button" href="/compare/muun-vs-phoenix.html">Compare with Muun</a>
         </div>
       </li></ul>
 </section>
@@ -507,6 +507,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
