--- a/services/mynode.html
+++ b/services/mynode.html
@@ -334,7 +334,7 @@
             <img src="/images/start9.svg" alt="Start9" class="svg-icon" />
             <span class="visually-hidden">Start9</span>
           </a>
-          <a class="cta-button" href="/mynode-vs-start9.html?services=myNode,Start9&category=Run%20my%20own%20node">Compare with myNode</a>
+          <a class="cta-button" href="/compare/mynode-vs-start9.html">Compare with myNode</a>
         </div>
       </li>
       <li class="alt-item">
@@ -343,7 +343,7 @@
             <img src="/images/umbrel.svg" alt="Umbrel" class="svg-icon" />
             <span class="visually-hidden">Umbrel</span>
           </a>
-          <a class="cta-button" href="/mynode-vs-umbrel.html?services=myNode,Umbrel&category=Run%20my%20own%20node">Compare with myNode</a>
+          <a class="cta-button" href="/compare/mynode-vs-umbrel.html">Compare with myNode</a>
         </div>
       </li></ul>
 </section>
@@ -449,6 +449,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
