--- a/services/start9.html
+++ b/services/start9.html
@@ -334,7 +334,7 @@
             <img src="/images/mynode.svg" alt="myNode" class="svg-icon" />
             <span class="visually-hidden">myNode</span>
           </a>
-          <a class="cta-button" href="/mynode-vs-start9.html?services=Start9,myNode&category=Run%20my%20own%20node">Compare with Start9</a>
+          <a class="cta-button" href="/compare/mynode-vs-start9.html">Compare with Start9</a>
         </div>
       </li>
       <li class="alt-item">
@@ -343,7 +343,7 @@
             <img src="/images/umbrel.svg" alt="Umbrel" class="svg-icon" />
             <span class="visually-hidden">Umbrel</span>
           </a>
-          <a class="cta-button" href="/start9-vs-umbrel.html?services=Start9,Umbrel&category=Run%20my%20own%20node">Compare with Start9</a>
+          <a class="cta-button" href="/compare/start9-vs-umbrel.html">Compare with Start9</a>
         </div>
       </li></ul>
 </section>
@@ -449,6 +449,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
