--- a/services/strike.html
+++ b/services/strike.html
@@ -389,7 +389,7 @@
             <img src="/images/bisq.svg" alt="Bisq" class="svg-icon" />
             <span class="visually-hidden">Bisq</span>
           </a>
-          <a class="cta-button" href="/bisq-vs-strike.html?services=Strike,Bisq&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/bisq-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -398,7 +398,7 @@
             <img src="/images/bitonic.svg" alt="Bitonic" class="svg-icon" />
             <span class="visually-hidden">Bitonic</span>
           </a>
-          <a class="cta-button" href="/bitonic-vs-strike.html?services=Strike,Bitonic&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/bitonic-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -407,7 +407,7 @@
             <img src="/images/bull-bitcoin.svg" alt="Bull Bitcoin" class="svg-icon" />
             <span class="visually-hidden">Bull Bitcoin</span>
           </a>
-          <a class="cta-button" href="/bull-bitcoin-vs-strike.html?services=Strike,Bull%20Bitcoin&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/bull-bitcoin-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -416,7 +416,7 @@
             <img src="/images/hodlhodl.svg" alt="Hodlhodl" class="svg-icon" />
             <span class="visually-hidden">Hodlhodl</span>
           </a>
-          <a class="cta-button" href="/hodlhodl-vs-strike.html?services=Strike,Hodlhodl&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/hodlhodl-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -425,7 +425,7 @@
             <img src="/images/peach.svg" alt="Peach" class="svg-icon" />
             <span class="visually-hidden">Peach</span>
           </a>
-          <a class="cta-button" href="/peach-vs-strike.html?services=Strike,Peach&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/peach-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -434,7 +434,7 @@
             <img src="/images/pocket.svg" alt="Pocket" class="svg-icon" />
             <span class="visually-hidden">Pocket</span>
           </a>
-          <a class="cta-button" href="/pocket-vs-strike.html?services=Strike,Pocket&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/pocket-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -443,7 +443,7 @@
             <img src="/images/relai.svg" alt="Relai" class="svg-icon" />
             <span class="visually-hidden">Relai</span>
           </a>
-          <a class="cta-button" href="/relai-vs-strike.html?services=Strike,Relai&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/relai-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -452,7 +452,7 @@
             <img src="/images/river.svg" alt="River" class="svg-icon" />
             <span class="visually-hidden">River</span>
           </a>
-          <a class="cta-button" href="/river-vs-strike.html?services=Strike,River&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/river-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -461,7 +461,7 @@
             <img src="/images/robosats.svg" alt="RoboSats" class="svg-icon" />
             <span class="visually-hidden">RoboSats</span>
           </a>
-          <a class="cta-button" href="/robosats-vs-strike.html?services=Strike,RoboSats&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/robosats-vs-strike.html">Compare with Strike</a>
         </div>
       </li>
       <li class="alt-item">
@@ -470,7 +470,7 @@
             <img src="/images/swan.svg" alt="Swan" class="svg-icon" />
             <span class="visually-hidden">Swan</span>
           </a>
-          <a class="cta-button" href="/strike-vs-swan.html?services=Strike,Swan&category=Buy%20Bitcoin">Compare with Strike</a>
+          <a class="cta-button" href="/compare/strike-vs-swan.html">Compare with Strike</a>
         </div>
       </li></ul>
 </section>
@@ -576,6 +576,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
