--- a/services/umbrel.html
+++ b/services/umbrel.html
@@ -334,7 +334,7 @@
             <img src="/images/mynode.svg" alt="myNode" class="svg-icon" />
             <span class="visually-hidden">myNode</span>
           </a>
-          <a class="cta-button" href="/mynode-vs-umbrel.html?services=Umbrel,myNode&category=Run%20my%20own%20node">Compare with Umbrel</a>
+          <a class="cta-button" href="/compare/mynode-vs-umbrel.html">Compare with Umbrel</a>
         </div>
       </li>
       <li class="alt-item">
@@ -343,7 +343,7 @@
             <img src="/images/start9.svg" alt="Start9" class="svg-icon" />
             <span class="visually-hidden">Start9</span>
           </a>
-          <a class="cta-button" href="/start9-vs-umbrel.html?services=Umbrel,Start9&category=Run%20my%20own%20node">Compare with Umbrel</a>
+          <a class="cta-button" href="/compare/start9-vs-umbrel.html">Compare with Umbrel</a>
         </div>
       </li></ul>
 </section>
@@ -449,6 +449,7 @@
 
   <script defer src="js/script.js"></script>
   <script defer src="/js/compare.js"></script>
+  <script defer src="/js/migration.js"></script>
 </body>
 </html>
 
